--- a/c++/CMakeLists.txt
+++ b/c++/CMakeLists.txt
@@ -46,13 +46,13 @@ set(WITH_OPENSSL "AUTO" CACHE STRING
 # define list of values GUI will offer for the variable
 set_property(CACHE WITH_OPENSSL PROPERTY STRINGS AUTO ON OFF)
 
-set(WITH_NOISE "AUTO" CACHE STRING
-  "Whether or not to build libkj-noise by linking against noise-c")
-set_property(CACHE WITH_NOISE PROPERTY STRINGS AUTO ON OFF)
-
 set(WITH_ZLIB "AUTO" CACHE STRING
   "Whether or not to build libkj-gzip by linking against zlib")
 set_property(CACHE WITH_ZLIB PROPERTY STRINGS AUTO ON OFF)
+
+set(WITH_NOISE "AUTO" CACHE STRING
+  "Whether or not to build libkj-noise by linking against sodium")
+set_property(CACHE WITH_NOISE PROPERTY STRINGS AUTO ON OFF)
 
 # shadow cache variable original value with ON/OFF,
 # so from now on OpenSSL-specific code just has to check:
@@ -72,19 +72,6 @@ elseif (WITH_OPENSSL)
   find_package(OpenSSL REQUIRED COMPONENTS Crypto SSL)
 endif()
 
-if (CAPNP_LITE)
-  set(WITH_NOISE OFF)
-elseif (WITH_NOISE STREQUAL "AUTO")
-  find_package(noise-c)
-  if (NOISE_FOUND)
-    set(WITH_NOISE ON)
-  else()
-    set(WITH_NOISE OFF)
-  endif()
-elseif (WITH_NOISE)
-  #find_package(noise-c REQUIRED)
-endif()
-
 # shadow cache variable original value with ON/OFF,
 # so from now on ZLIB-specific code just has to check:
 #     if (WITH_ZLIB)
@@ -101,6 +88,26 @@ elseif (WITH_ZLIB STREQUAL "AUTO")
   endif()
 elseif (WITH_ZLIB)
   find_package(ZLIB REQUIRED)
+endif()
+
+# shadow cache variable original value with ON/OFF,
+# so from now on NOISE-specific code just has to check:
+#     if (WITH_NOISE)
+#         ...
+#     endif()
+if(CAPNP_LITE)
+  set(WITH_NOISE OFF)
+elseif (WITH_NOISE STREQUAL "AUTO")
+  find_package(PkgConfig)
+  pkg_check_modules(SODIUM libsodium)
+  if(SODIUM_FOUND)
+    set(WITH_NOISE ON)
+  else()
+    set(WITH_NOISE OFF)
+  endif()
+elseif (WITH_NOISE)
+  find_package(PkgConfig REQUIRED)
+  pkg_check_modules(SODIUM REQUIRED libsodium)
 endif()
 
 set(WITH_FIBERS "AUTO" CACHE STRING
@@ -238,6 +245,7 @@ if(NOT MSVC)  # Don't install pkg-config files when building with MSVC
       pkgconfig/kj-async.pc
       pkgconfig/kj-gzip.pc
       pkgconfig/kj-http.pc
+      pkgconfig/kj-noise.pc
       pkgconfig/kj-test.pc
       pkgconfig/kj-tls.pc
       pkgconfig/capnp-rpc.pc
