--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "c++/src/kj/compat/noise"]
-	path = c++/src/kj/compat/noise
+[submodule "c++/src/kj/compat/noise/noise-c"]
+	path = c++/src/kj/compat/noise/noise-c
 	url = https://github.com/rweather/noise-c.git
