--- a/c++/cmake/CapnProtoConfig.cmake.in
+++ b/c++/cmake/CapnProtoConfig.cmake.in
@@ -67,6 +67,11 @@ if (@WITH_ZLIB@) # WITH_ZLIB
   find_dependency(ZLIB)
 endif()
 
+if (@WITH_NOISE@) # WITH_NOISE
+  find_package(PkgConfig REQUIRED)
+  pkg_check_modules(SODIUM REQUIRED libsodium)
+endif()
+
 if (@_WITH_LIBUCONTEXT@) # _WITH_LIBUCONTEXT
   set(forwarded_config_flags)
   if(CapnProto_FIND_QUIETLY)
